--- a/__razvanvideo/home/templates/home/toate-videoclipurile.html
+++ b/__razvanvideo/home/templates/home/toate-videoclipurile.html
@@ -26,113 +26,167 @@
 
 		<section class="portfolio-grid pt-0 pb-0">
 			<div class="button-group filters-button-group">
-				<button class="button is-checked" data-filter="*">All works <sup class="filter-count"></sup></button>
-				<button class="button" data-filter=".webdesign">Web Design <sup class="filter-count"></sup></button>
-				<button class="button" data-filter=".illustrator">Illustrator <sup class="filter-count"></sup></button>
-				<button class="button" data-filter=".branding">Branding <sup class="filter-count"></sup></button>
-				<button class="button" data-filter=".photography">Photography <sup class="filter-count"></sup></button>
+				<button class="button is-checked" data-filter="*">Toate videoclipurile <sup class="filter-count"></sup></button>
+				<button class="button" data-filter=".nunta">Nunta <sup class="filter-count"></sup></button>
+				<button class="button" data-filter=".botez">Botez <sup class="filter-count"></sup></button>
+				<button class="button" data-filter=".alte_evenimente">Alte evenimente <sup class="filter-count"></sup></button>
 			</div>
 			<div class="grid grid-3 gutter-5 clearfix">	
-				<div class="grid-sizer"></div>							
-				<div class="grid-item webdesign">
+				<div class="grid-sizer"></div>		
+
+				<div class="grid-item nunta"> 
 					<div class="thumb">
-						<img class="item_image" src="{% static 'home/images/portfolio/masonry/1.jpg' %}" alt=""/>
+						<img src="{% static 'home/images/portofoliu-nunta/imagine-nunta-Ozgean-si-Maria.png' %}" alt="Video Nunta Ozgean si Maria" class="thumbnail" />
+						<div class="overlay" onclick="window.open('https://www.youtube.com/watch?v=OEZJmUJeMuI', '_blank');">
+							<div class="play-button-wrapper">
+								<i class="fas fa-play play-button"></i>
+							</div>
+						</div>
 						<div class="works-info">
 							<div class="label-text">
-								<h4>Wild Animal Life</h4>
-								<h6>Nature & Life</h6>
+								<h4>Ozgean si Maria</h4>
+								<h6>Video Nunta</h6>
 							</div>
 						</div>
 					</div>
-				</div>							
-				<div class="grid-item branding"> 
+				</div>
+
+				<div class="grid-item nunta"> 
 					<div class="thumb">
-						<img class="item_image" src="{% static 'home/images/portfolio/masonry/2.jpg' %}" alt=""/>
+						<img src="{% static 'home/images/portofoliu-nunta/video-cununie-civila-Alin-si-Gabriela.png' %}" alt="Video Cununie Civila Alin si Gabriela" class="thumbnail" />
+						<div class="overlay" onclick="window.open('https://www.youtube.com/watch?v=tMyDhNJQ0C0', '_blank');">
+							<div class="play-button-wrapper">
+								<i class="fas fa-play play-button"></i>
+							</div>
+						</div>
 						<div class="works-info">
 							<div class="label-text">
-								<h4>Beauty of nature in life</h4>
-								<h6>Nature & Life</h6>
+								<h4>Alin & Gabriela</h4>
+								<h6>Video Cununie Civila</h6>
 							</div>
 						</div>
 					</div>
-				</div>						
-				<div class="grid-item branding"> 
+				</div>
+
+				<div class="grid-item nunta"> 
 					<div class="thumb">
-						<img class="item_image" src="{% static 'home/images/portfolio/masonry/3.jpg' %}" alt=""/>
+						<img src="{% static 'home/images/portofoliu-nunta/video-nunta-Ionut-si-Cristina-pe-malul-Dunarii.png' %}" alt="Video Nunta Ionut si Cristina pe malul Dunarii" class="thumbnail" />
+						<div class="overlay" onclick="window.open('https://www.youtube.com/watch?v=EyzY7Wzsru0', '_blank');">
+							<div class="play-button-wrapper">
+								<i class="fas fa-play play-button"></i>
+							</div>
+						</div>
 						<div class="works-info">
 							<div class="label-text">
-								<h4>Forest Life</h4>
-								<h6>Nature & Life</h6>
+								<h4>Ionut si Cristina</h4>
+								<h6>Video Nunta pe malul Dunarii</h6>
 							</div>
 						</div>
 					</div>
-				</div>						
-				<div class="grid-item photography"> 
+				</div>
+				
+				<div class="grid-item botez"> 
 					<div class="thumb">
-						<img class="item_image" src="{% static 'home/images/portfolio/masonry/4.jpg' %}" alt=""/>
+						<img src="{% static 'home/images/portofoliu-nunta/video-botez-Vladimir-Andrei.png' %}" alt="Video botez Vladimir Andrei" class="thumbnail" />
+						<div class="overlay" onclick="window.open('https://www.youtube.com/watch?v=JaRtdL3ck6k', '_blank');">
+							<div class="play-button-wrapper">
+								<i class="fas fa-play play-button"></i>
+							</div>
+						</div>
 						<div class="works-info">
 							<div class="label-text">
-								<h4>Sky and Hills</h4>
-								<h6>Nature & Life</h6>
+								<h4>Andrei Vladimir</h4>
+								<h6>Botez</h6>
 							</div>
 						</div>
 					</div>
-				</div>						
-				<div class="grid-item photography"> 
+				</div>
+				
+				<div class="grid-item botez"> 
 					<div class="thumb">
-						<img class="item_image" src="{% static 'home/images/portfolio/masonry/5.jpg' %}" alt=""/>
+						<img src="{% static 'home/images/portofoliu-nunta/video-botez-Ecaterina-Elena.png' %}" alt="Video botez Ecaterina Elena" class="thumbnail" />
+						<div class="overlay" onclick="window.open('https://www.youtube.com/watch?v=JKYzStrbUsc', '_blank');">
+							<div class="play-button-wrapper">
+								<i class="fas fa-play play-button"></i>
+							</div>
+						</div>
 						<div class="works-info">
 							<div class="label-text">
-								<h4>Blue water in Ocean</h4>
-								<h6>Nature & Life</h6>
+								<h4>Ecaterina Elena</h4>
+								<h6>Botez</h6>
 							</div>
 						</div>
 					</div>
-				</div>						
-				<div class="grid-item photography">
+				</div>
+				
+				<div class="grid-item botez"> 
 					<div class="thumb">
-						<img class="item_image" src="{% static 'home/images/portfolio/masonry/6.jpg' %}" alt=""/>
+						<img src="{% static 'home/images/portofoliu-nunta/videoclip-botez-Fabian-Andrei.png' %}" alt="Videoclip botez Fabian Andrei" class="thumbnail" />
+						<div class="overlay" onclick="window.open('https://www.youtube.com/watch?v=7liAPKWU2YI', '_blank');">
+							<div class="play-button-wrapper">
+								<i class="fas fa-play play-button"></i>
+							</div>
+						</div>
 						<div class="works-info">
 							<div class="label-text">
-								<h4>Enjoy loneliness</h4>
-								<h6>Nature & Life</h6>
+								<h4>Fabian Andrei</h4>
+								<h6>Botez</h6>
 							</div>
 						</div>
 					</div>
-				</div>						
-				<div class="grid-item illustrator"> 
+				</div>		
+				
+				<div class="grid-item nunta"> 
 					<div class="thumb">
-						<img class="item_image" src="{% static 'home/images/portfolio/masonry/7.jpg' %}" alt=""/>
+						<img src="{% static 'home/images/portofoliu-nunta/videoclip-nunta-Georgiana-si-Ciprian.png' %}" alt="Nunta Georgiana si Ciprian" class="thumbnail" />
+						<div class="overlay" onclick="window.open('https://www.youtube.com/watch?v=NjI95M8Umn0', '_blank');">
+							<div class="play-button-wrapper">
+								<i class="fas fa-play play-button"></i>
+							</div>
+						</div>
 						<div class="works-info">
 							<div class="label-text">
-								<h4>Travelling in nature</h4>
-								<h6>Nature & Life</h6>
+								<h4>Georgiana si Ciprian</h4>
+								<h6>Video Nunta</h6>
 							</div>
 						</div>
 					</div>
-				</div>						
-				<div class="grid-item illustrator"> 
+				</div>			
+						
+				<div class="grid-item botez"> 
 					<div class="thumb">
-						<img class="item_image" src="{% static 'home/images/portfolio/masonry/8.jpg' %}" alt=""/>
+						<img src="{% static 'home/images/portofoliu-nunta/videoclip-botez-Evelina-Mihaela.png' %}" alt="Videoclip botez Evelina Mihaela" class="thumbnail" />
+						<div class="overlay" onclick="window.open('https://www.youtube.com/watch?v=9QgT6JFYbnU', '_blank');">
+							<div class="play-button-wrapper">
+								<i class="fas fa-play play-button"></i>
+							</div>
+						</div>
 						<div class="works-info">
 							<div class="label-text">
-								<h4>Beauty of nature in life</h4>
-								<h6>Nature & Life</h6>
+								<h4>Evelina Mihaela</h4>
+								<h6>Botez</h6>
 							</div>
 						</div>
 					</div>
-				</div>						
-				<div class="grid-item illustrator"> 
+				</div>	
+
+				<div class="grid-item nunta"> 
 					<div class="thumb">
-						<img class="item_image" src="{% static 'home/images/portfolio/masonry/11.jpg' %}" alt=""/>
+						<img src="{% static 'home/images/portofoliu-nunta/Video-Cununie-Religioasa-Andrei-si-Natalia.png' %}" alt="Video Cuninie Religioasa Andrei si Natalia" class="thumbnail" />
+						<div class="overlay" onclick="window.open('https://www.youtube.com/watch?v=ozDwb57W8eA', '_blank');">
+							<div class="play-button-wrapper">
+								<i class="fas fa-play play-button"></i>
+							</div>
+						</div>
 						<div class="works-info">
 							<div class="label-text">
-								<h4>Cute deer running</h4>
-								<h6>Nature & Life</h6>
+								<h4>Natalia si Andrei</h4>
+								<h6>Video Cununie Religioasa</h6>
 							</div>
 						</div>
 					</div>
-				</div>						
+				</div>			
+
 				<div class="grid-item webdesign"> 
 					<div class="thumb">
 						<img class="item_image" src="{% static 'home/images/portfolio/masonry/10.jpg' %}" alt=""/>
