--- a/__razvanvideo/home/templates/home/base.html
+++ b/__razvanvideo/home/templates/home/base.html
@@ -24,6 +24,10 @@
 
         <!-- Lead Style -->
         <link href="{% static 'home/css/style.css' %}" rel="stylesheet" type="text/css">
+
+		<!-- Include Font Awesome -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+		
     </head>
 
 	
