--- a/__razvanvideo/home/templates/home/portofoliu-alte-evenimente-Constanta.html
+++ b/__razvanvideo/home/templates/home/portofoliu-alte-evenimente-Constanta.html
@@ -3,12 +3,12 @@
 
 <!-- Block title -->
 {% block title %}
-<title>Videoclipuri Botez Constanta</title>
+<title>Si alte evenimente Constanta</title>
 {% endblock %}
-			
+
 <!-- Block content -->
 {% block content %}
-
+			
 	<div class="inner_body">
 		<!-- Page Header -->
 		<div class="page-header type1">
@@ -69,6 +69,6 @@
 		
 	</div>
 
-	<div class="page_title"><span>Videoclipuri Botez Constanta</span></div>
+	<div class="page_title"><span>Si alte evenimente Constanta</span></div>
 
 {% endblock %}
