--- a/__razvanvideo/home/templates/home/toate-videoclipurile.html
+++ b/__razvanvideo/home/templates/home/toate-videoclipurile.html
@@ -164,7 +164,7 @@
 						<div class="works-info">
 							<div class="label-text">
 								<h4>Evelina Mihaela</h4>
-								<h6>Botez</h6>
+								<h6>Video Botez</h6>
 							</div>
 						</div>
 					</div>
@@ -187,44 +187,63 @@
 					</div>
 				</div>			
 
-				<div class="grid-item webdesign"> 
+				<div class="grid-item nunta"> 
 					<div class="thumb">
-						<img class="item_image" src="{% static 'home/images/portfolio/masonry/10.jpg' %}" alt=""/>
+						<img src="{% static 'home/images/portofoliu-nunta/Clip-nunta-Alev-si-Mihai.png' %}" alt="Clip Nunta Alev si Mihai" class="thumbnail" />
+						<div class="overlay" onclick="window.open('https://www.youtube.com/watch?v=_7WPjHM6z2o', '_blank');">
+							<div class="play-button-wrapper">
+								<i class="fas fa-play play-button"></i>
+							</div>
+						</div>
 						<div class="works-info">
 							<div class="label-text">
-								<h4>Beauty of nature in life</h4>
-								<h6>Nature & Life</h6>
+								<h4>Alev si Mihai</h4>
+								<h6>Video Nunta Alev si Mihai</h6>
 							</div>
 						</div>
 					</div>
-				</div>										
-				<div class="grid-item webdesign"> 
+				</div>		
+				
+				<div class="grid-item botez"> 
 					<div class="thumb">
-						<img class="item_image" src="{% static 'home/images/portfolio/masonry/9.jpg' %}" alt=""/>
+						<img src="{% static 'home/images/portofoliu-nunta/Video-botez-Alessia-Natalia.png' %}" alt="Video botez Alessia Natalia" class="thumbnail" />
+						<div class="overlay" onclick="window.open('https://www.youtube.com/watch?v=W3vl7cofPnk', '_blank');">
+							<div class="play-button-wrapper">
+								<i class="fas fa-play play-button"></i>
+							</div>
+						</div>
 						<div class="works-info">
 							<div class="label-text">
-								<h4>Beauty of black deer</h4>
-								<h6>Nature & Life</h6>
+								<h4>Alessia Natalia</h4>
+								<h6>Video Botez</h6>
 							</div>
 						</div>
 					</div>
-				</div>						
-				<div class="grid-item illustrator"> 
+				</div>	
+
+				<div class="grid-item nunta"> 
 					<div class="thumb">
-						<img class="item_image" src="{% static 'home/images/portfolio/masonry/12.jpg' %}" alt=""/>
+						<img src="{% static 'home/images/portofoliu-nunta/video-nunta-Alexandru-Raluca.png' %}" alt="Video nunta Alexandru si Ralua" class="thumbnail" />
+						<div class="overlay" onclick="window.open('https://www.youtube.com/watch?v=Vi4wgLG6iao', '_blank');">
+							<div class="play-button-wrapper">
+								<i class="fas fa-play play-button"></i>
+							</div>
+						</div>
 						<div class="works-info">
 							<div class="label-text">
-								<h4>Beauty of nature in life</h4>
-								<h6>Nature & Life</h6>
+								<h4>Alexandru si Raluca</h4>
+								<h6>Video Nunta Raluca si Alexandru</h6>
 							</div>
 						</div>
 					</div>
-				</div>						
+				</div>		
+				
+				<!--
 				<div class="grid-item photography"> 
 					<div class="thumb">
 						<img class="item_image" src="{% static 'home/images/portfolio/masonry/13.jpg' %}" alt=""/>
 						<div class="works-info">
-							<div class="label-text">
+							<div class="label-text">++
 								<h4>Green trees on the way</h4>
 								<h6>Nature & Life</h6>
 							</div>
@@ -253,6 +272,7 @@
 						</div>
 					</div>
 				</div>	
+				-->
 			</div>
 		</section>
 	</div>
